--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  overflow: auto !important;
+}
+
+p {
+  margin: 0;
+}
+
+h1 {
+  font-size: 20px;
+}
+
+tr:hover {
+  cursor: pointer;
+}
+
+.component {
+  display: flex;
+}
+
+@media (max-width: 767.98px) {
+  .container {
+    width: 100%;
+    max-width: 100% !important;
+  }
+  .component {
+    flex-wrap: wrap;
+  }
+}
