Universāls komponentes navbar ar z-index overflow

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,12 +1,6 @@
-<div class="sidenav">
-    <button type="button" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="right" title="Projekti" data-toggle="modal" [attr.data-target]="'#mainModal'+ 1">
-        <i class="material-icons">
-            description
-        </i>
-    </button>
-    <button type="button" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="right" title="Darbinieki">
-        <i class="material-icons">
-            person
-        </i>
-    </button>
-</div>
+<button type="button" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="right" [title]="cfg.virsraksts"
+    data-toggle="modal" [attr.data-target]="'#mainModal'+ cfg.modalId">
+    <i class="material-icons">
+        {{cfg.icon}}
+    </i>
+</button>
