--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -10,7 +10,7 @@
                 <div class="modalIcons">
                     <button type="button" class="btn btn-outline-dark" data-toggle="modal" [attr.data-target]="'#mainModal'+ cfg.modalId">
                         <i class="material-icons">
-                            library_books
+                            {{cfg.icon}}
                         </i>
                     </button>
                 </div>
