business system multiple modal

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,12 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a routerLink="/skatuPiemers" routerLinkActive="active" class="nav-link">Projekti & Darbinieki</a>
+                <a routerLink="/skatuPiemers" routerLinkActive="active" class="nav-link">Projekti</a>
+                <a routerLink="/skatuPiemersDarbinieki" routerLinkActive="active" class="nav-link">Darbinieki</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <!-- <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="searchText" name="filtrs">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        </form> -->
     </div>
 </nav>
